<android.support.v4.widget.DrawerLayout
    android:id="@+id/drawer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mingle.service.ui.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                style="@style/AboutStyle"
                android:text="@string/aboutThinking"/>

            <TextView
                style="@style/AboutStyle"
                android:text="@string/aboutThinking_1"/>

            <TextView
                style="@style/AboutStyle"
                android:text="@string/aboutThinking_2"/>

            <TextView
                style="@style/AboutStyle"
                android:text="@string/aboutThinking_3"/>

            <TextView
                style="@style/AboutStyle"
                android:text="@string/aboutThinking_4"/>

        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/menuLL"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="start"
        android:clickable="true"
        android:orientation="vertical">

        <include layout="@layout/item_list"/>
    </FrameLayout>
</android.support.v4.widget.DrawerLayout>